fix: don't hide overflow to make carousel extend to full width. Temporary fix, should be addressed later, fine for now

--- a/src/components/LogoMarquee.css
+++ b/src/components/LogoMarquee.css
@@ -1,6 +1,5 @@
 .logo-loop {
   width: 100%;
-  overflow: hidden;
   position: relative;
 }
 
